maze.lessons.maze.island.IslandMaze.scala.error
Escaper:27: error: not found: value GetY
  while(GetY()!=11 ){
        ^